# pkle

./: CMakeLists.txt  context.cpp  context.h  loader.cpp  loader.h  main.cpp  solver.h  tests.cpp  word.h
